# src/backend/flows-documents/src/model/stepData.go
@@ -8,3 +8,11 @@ type StepData struct {
     Participants []string   `json:"participants"`
     Description string      `json:"description"`
 }
+
+type UserStepData struct {
+    Id string               `json:"id"`
+    Type string             `json:"type"`
+    Flow string             `json:"flow"`
+    FlowName string         `json:"flow_name"`
+}
+
