# src/backend/flows-documents/src/model/userAction.go
@@ -1,0 +1,11 @@
+package model
+
+type UserAction struct {
+    Document string               `json:"document"`
+    Title string                  `json:"title"`
+    Flow string                   `json:"flow"`
+    FlowName string               `json:"flow_name"`
+    Step string                   `json:"step"`
+    Type string                   `json:"type"`
+}
+
